--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ readme = "README.md"
 authors = [{ name = "Farhan Hasin Chowdhury", email = "shovik.is.here@gmail.com" }]
 license = { file = "LICENSE" }
 classifiers = [
+     license = "Apache-2.0"
     "Programming Language :: Python :: 3",
 ]
 keywords = []
@@ -27,3 +28,4 @@ Homepage = "https://github.com/fhsinchy/rmbyext"
 [project.scripts]
 
 rmbyext = "rmbyext:main"
+
