--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@
 requires      = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools]
+py-modules = []
+
 [project]
 name = "rmbyext"
 version = "1.0.0"
@@ -27,5 +30,6 @@ Homepage = "https://github.com/fhsinchy/rmbyext"
 [project.scripts]
 
 rmbyext = "rmbyext:main"
+
 
 
